--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -143,6 +143,9 @@
                   </Properties>
                 </Component>
                 <Container class="javax.swing.JDesktopPane" name="dspFondo">
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+                  </AuxValues>
 
                   <Layout>
                     <DimensionLayout dim="0">
